feat(login): allow user to login using email
-after creating account user should login with his credentials
-after login user should be provided with token

[Delivers #174797518]
