# swagger.json
@@ -102,6 +102,52 @@
           }
         }
       }
+    },
+    "/api/auth/login": {
+      "post": {
+        "description": "Login to barefoot nomad",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "example": "email@test.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "password123"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "$ref": "#/components/schemas/User"
+                    },
+                    "token": {
+                      "type": "string",
+                      "example": "jwttoken"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -121,11 +167,11 @@
           },
           "user name": {
             "type": "string",
-            "example": "Bey Faith"
+            "example": "user name"
           },
           "user email": {
             "type": "string",
-            "example": "fryumugabe@gmail.com"
+            "example": "email@test.com"
           }
         },
         "description": "Model containing user info"
